@@ -4,26 +4,21 @@ import java.util.Date;
 
 public class Test {
 
-    public static void main(String[] args) {
-        // TODO Auto-generated method stub
-        String str1 = "1234";
-        //int a = (int)str1;
-        int a = Integer.parseInt(str1);
-        Integer b = Integer.valueOf(str1);
-        int c = b;
-
-        long l = 67;
-        int ss = (int) l;
-        boolean bb = true;
-//        int sss = bb;
-        int ttt = 789789;
-        Integer d = 4; // new Integer(4);
-
-        Date date;
-
-        String yyy = String.valueOf(ttt);
-        yyy = ttt + "";
-
-    }
+	public static void main(String[] args) {
+		// TODO Auto-generated method stub
+		String str1 = "1234";
+		//int a = (int)str1;
+		int a = Integer.parseInt(str1);
+		Integer b = Integer.valueOf(str1);
+		int c = b;
+		
+		Integer d = 4; // new Integer(4);
+		
+		Date date;
+		
+		
+		
+		
+	}
 
 }
